# chitti_walker

./: CMakeLists.txt  LICENSE  README.md  chitti_custom.world  chitti_custom_world  package.xml
launch/: chitti_walker.py
results/rosbag2_2022_12_07-23_58_57/: metadata.yaml  rosbag2_2022_12_07-23_58_57_0.db3
src/: walker.cpp
